--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -27,7 +27,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #123132;
+    --background: #0c1f1f;
     --foreground: #e4e6e6;
   }
 }
@@ -38,18 +38,14 @@ body {
 }
 
 h1 {
-  @apply text-4xl sm:text-5xl mb-4 px-2 lg:px-0;
+  @apply text-5xl sm:text-6xl mb-4;
 }
 h2 {
-  @apply text-2xl sm:text-3xl mb-2 px-2 lg:px-0;
+  @apply text-3xl sm:text-4xl mb-2;
 }
 
 h3 {
-  @apply text-xl sm:text-2xl mb-2 px-2 lg:px-0;
-}
-
-p {
-  @apply px-2 lg:px-0;
+  @apply text-xl sm:text-2xl mb-2;
 }
 
 figcaption {
@@ -57,5 +53,9 @@ figcaption {
 }
 
 .button {
-  @apply px-4 py-2 border rounded-2xl my-2 hover:bg-background hover:text-foreground transition-colors;
+  @apply px-4 py-2 shadow-2xl rounded-2xl bg-background text-primary hover:bg-background/80 focus:ring-2 ring-background dark:bg-foreground dark:hover:bg-foreground/80 dark:ring-foreground transition-colors;
+}
+
+.button-secondary {
+  @apply px-4 py-2 shadow-2xl rounded-2xl bg-primary border border-white hover:bg-background/20 focus:ring-1 ring-background dark:hover:bg-background/80 dark:ring-foreground transition-colors;
 }
