date format and spacing

--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -38,14 +38,14 @@ body {
 }
 
 h1 {
-  @apply text-5xl sm:text-6xl mb-4;
+  @apply text-5xl sm:text-6xl mb-2;
 }
 h2 {
-  @apply text-3xl sm:text-4xl mb-2;
+  @apply text-3xl sm:text-4xl;
 }
 
 h3 {
-  @apply text-xl sm:text-2xl mb-2;
+  @apply text-xl sm:text-2xl;
 }
 
 figcaption {
